@@ -2,6 +2,8 @@ lilv (UNRELEASED) unstable; urgency=low
 
   * Add lv2core as a pkg-config dependency (for lv2.h header include)
   * Obey prefix when installing bash completion script
+  * Support integer minimum, maximum, and default port values in
+    lilv_plugin_get_port_ranges_float
 
   -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
